--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "commander": "2.19.0",
     "cors": "2.8.5",
+    "dotenv": "6.2.0",
     "express": "4.16.4",
     "nodemon": "1.18.9",
     "react": "^16.7.0",
